--- a/wiki/fr/TechDraw_HoleShaftFit.html
+++ b/wiki/fr/TechDraw_HoleShaftFit.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw HoleShaftFit/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+HoleShaftFit&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_HoleShaftFit.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Passungen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_HoleShaftFit.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw HoleShaftFit (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_HoleShaftFit.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Accoppiamento foro/albero (56% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_HoleShaftFit.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj pasowanie otworu / wa&#322;u (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_HoleShaftFit.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#44396;&#47693;&#52629; &#45180;&#50892;&#47582;&#52644; (56% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -59,17 +59,15 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une seule cote lin&eacute;aire (<a href="../fr/TechDraw_LengthDimension.html" title="TechDraw LengthDimension/fr">longueur</a> <a href="../fr/TechDraw_HorizontalDimension.html" title="TechDraw HorizontalDimension/fr">horizontale</a> ou <a href="../fr/TechDraw_VerticalDimension.html" title="TechDraw VerticalDimension/fr">verticale</a>) ou une seule cote de <a href="../fr/TechDraw_DiameterDimension.html" title="TechDraw DiameterDimension/fr">diam&egrave;tre</a>.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_HoleShaftFit.svg&amp;filetimestamp=20241127175338&amp;.html" class="mw-file-description"><img src="../File/TechDraw_HoleShaftFit.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ajouter une tol&eacute;rance &agrave; un trou ou &agrave; un arbre</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Symboles &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_HoleShaftFit.svg&amp;filetimestamp=20241127175338&amp;.html" class="mw-file-description"><img src="../File/TechDraw_HoleShaftFit.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter une tol&eacute;rance &agrave; un trou ou &agrave; un arbre</b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_HoleShaftFit.svg&amp;filetimestamp=20241127175338&amp;.html" class="mw-file-description"><img src="../File/TechDraw_HoleShaftFit.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Tol&eacute;rance de trou/d'arbre</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Symboles &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_HoleShaftFit.svg&amp;filetimestamp=20241127175338&amp;.html" class="mw-file-description"><img src="../File/TechDraw_HoleShaftFit.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Tol&eacute;rance de trou/d'arbre</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre.</li>
 <li>Sp&eacute;cifiez <b>Tol&eacute;rance d'arbre</b> ou <b>Tol&eacute;rance de trou</b> selon le cas.</li>
 <li>S&eacute;lectionnez l'option de tol&eacute;rance ISO 286 souhait&eacute;e dans la liste d&eacute;roulante. Le champ correspondant et le type de tol&eacute;rance (large, adapt&eacute;, serr&eacute;) sont mis &agrave; jour.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li>
 <li>L'option s&eacute;lectionn&eacute;e et les valeurs de tol&eacute;rance calcul&eacute;es sont ajout&eacute;es &agrave; la cote.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -117,34 +115,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124114949
+Cached time: 20260124115430
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.103 seconds
-Preprocessor visited node count: 358/1000000
-Post&#8208;expand include size: 26000/2097152 bytes
-Template argument size: 10118/2097152 bytes
+CPU time usage: 0.076 seconds
+Real time usage: 0.134 seconds
+Preprocessor visited node count: 357/1000000
+Post&#8208;expand include size: 25956/2097152 bytes
+Template argument size: 10074/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1428/5000000 bytes
+Unstrip post&#8208;expand size: 1432/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.379      1 -total
- 29.16%    5.650      1 Template:TechDraw_Tools_navi/fr
- 22.77%    4.413      2 Template:Navigation_menu_2
- 21.88%    4.241      1 Template:Userdocnavi/fr
- 15.40%    2.984      2 Template:Docnav/fr
- 11.24%    2.179      1 Template:GuiCommand/fr
-  7.90%    1.531      1 Template:Caption
-  5.60%    1.086      2 Template:Button
-  5.28%    1.023      3 Template:MenuCommand
+100.00%   30.122      1 -total
+ 22.71%    6.841      1 Template:TechDraw_Tools_navi/fr
+ 19.97%    6.015      2 Template:Docnav/fr
+ 17.52%    5.277      1 Template:Userdocnavi/fr
+ 15.17%    4.568      2 Template:Navigation_menu_2
+ 13.30%    4.005      1 Template:GuiCommand/fr
+ 10.73%    3.233      3 Template:MenuCommand
+  7.05%    2.123      2 Template:Button
+  6.20%    1.866      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307177-0!canonical and timestamp 20260124114949 and revision id 1743356. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307177-0!canonical and timestamp 20260124115430 and revision id 1743358. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
