--- a/wiki/fr/TechDraw_StackTop.html
+++ b/wiki/fr/TechDraw_StackTop.html
@@ -71,14 +71,12 @@
 </p><p>L'ordre d'empilement peut &ecirc;tre modifi&eacute; dans les scripts en changeant la propri&eacute;t&eacute; <code>StackOrder</code> de <code>ViewObject</code> d'une vue.
 </p><p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_SpreadsheetView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_SpreadsheetView.html" title="TechDraw SpreadsheetView/fr">Vue d'un objet Spreadsheet</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_HoleShaftFit.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_HoleShaftFit.html" title="TechDraw HoleShaftFit/fr">Tol&eacute;rance de trou/d'arbre</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_StackBottom.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_StackBottom.html" title="TechDraw StackBottom/fr">Empiler en bas</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -118,15 +116,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124120339
+Cached time: 20260124120350
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.114 seconds
-Preprocessor visited node count: 392/1000000
-Post&#8208;expand include size: 25139/2097152 bytes
-Template argument size: 10099/2097152 bytes
+CPU time usage: 0.074 seconds
+Real time usage: 0.129 seconds
+Preprocessor visited node count: 391/1000000
+Post&#8208;expand include size: 25121/2097152 bytes
+Template argument size: 10087/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -134,19 +132,19 @@ Unstrip post&#8208;expand size: 1211/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.311      1 -total
- 23.10%    6.770      1 Template:TechDraw_Tools_navi/fr
- 19.95%    5.847      1 Template:PropertyView
- 17.48%    5.122      2 Template:Navigation_menu_2
- 13.16%    3.857      1 Template:Userdocnavi/fr
- 12.18%    3.569      1 Template:GuiCommand/fr
- 10.59%    3.104      1 Template:Variable
-  9.17%    2.688      2 Template:Docnav/fr
-  8.74%    2.561      1 Template:MenuCommand
-  6.56%    1.922      2 Template:Incode
+100.00%   41.058      1 -total
+ 22.59%    9.277      1 Template:Userdocnavi/fr
+ 22.04%    9.050      1 Template:TechDraw_Tools_navi/fr
+ 17.95%    7.371      1 Template:PropertyView
+ 15.95%    6.550      2 Template:Navigation_menu_2
+  8.45%    3.471      1 Template:GuiCommand/fr
+  7.90%    3.245      1 Template:Variable
+  7.87%    3.232      1 Template:MenuCommand
+  7.39%    3.033      2 Template:Incode
+  5.90%    2.422      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297003-0!canonical and timestamp 20260124120339 and revision id 1743362. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297003-0!canonical and timestamp 20260124120350 and revision id 1743364. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
