--- a/wiki/fr/TechDraw_StackTop.html
+++ b/wiki/fr/TechDraw_StackTop.html
@@ -11,7 +11,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -22,7 +21,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Empilement &rarr; D&eacute;placer la vue vers le haut de la pile
+<td class="ctEven">TechDraw &rarr; Empilement &rarr; Haut de la pile
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -51,7 +50,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Empiler en haut</b> d&eacute;place les vues au sommet de l'ordre d'empilement. L'ordre d'empilement contr&ocirc;le la profondeur apparente des vues sur une feuille.
 </p><p><span id="Usage"></span>
@@ -116,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124120350
+Cached time: 20260124120429
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.129 seconds
-Preprocessor visited node count: 391/1000000
-Post&#8208;expand include size: 25121/2097152 bytes
-Template argument size: 10087/2097152 bytes
+CPU time usage: 0.085 seconds
+Real time usage: 0.116 seconds
+Preprocessor visited node count: 390/1000000
+Post&#8208;expand include size: 25071/2097152 bytes
+Template argument size: 10037/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -132,19 +130,19 @@ Unstrip post&#8208;expand size: 1211/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.058      1 -total
- 22.59%    9.277      1 Template:Userdocnavi/fr
- 22.04%    9.050      1 Template:TechDraw_Tools_navi/fr
- 17.95%    7.371      1 Template:PropertyView
- 15.95%    6.550      2 Template:Navigation_menu_2
-  8.45%    3.471      1 Template:GuiCommand/fr
-  7.90%    3.245      1 Template:Variable
-  7.87%    3.232      1 Template:MenuCommand
-  7.39%    3.033      2 Template:Incode
-  5.90%    2.422      2 Template:Docnav/fr
+100.00%   31.498      1 -total
+ 26.72%    8.415      1 Template:TechDraw_Tools_navi/fr
+ 22.69%    7.148      2 Template:Navigation_menu_2
+ 16.15%    5.088      1 Template:PropertyView
+ 14.53%    4.577      1 Template:Userdocnavi/fr
+ 10.54%    3.320      2 Template:Docnav/fr
+ 10.36%    3.262      1 Template:Variable
+  9.99%    3.146      1 Template:GuiCommand/fr
+  7.93%    2.498      1 Template:Button
+  7.12%    2.242      2 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297003-0!canonical and timestamp 20260124120350 and revision id 1743364. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297003-0!canonical and timestamp 20260124120428 and revision id 1743366. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
