--- a/wiki/fr/TechDraw_StackTop.html
+++ b/wiki/fr/TechDraw_StackTop.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw StackTop/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+StackTop&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_StackTop.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw StapelOberseite (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_StackTop.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw StackTop (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_StackTop.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Sposta in cima (64% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_StackTop.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Przesu&#324; poziom na g&oacute;r&#281; (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -55,13 +55,11 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>S&eacute;lectionnez une ou plusieurs vues sur une <a href="../fr/TechDraw_PageDefault.html" title="TechDraw PageDefault/fr">feuille</a> ou dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>. Pour cet outil, et <a href="../fr/TechDraw_StackBottom.html" title="TechDraw StackBottom/fr">TechDraw Empiler en bas</a>, l'ordre de s&eacute;lection est important.</li>
+<ol><li>S&eacute;lectionnez une ou plusieurs vues sur une <a href="../fr/TechDraw_PageDefault.html" title="TechDraw PageDefault/fr">feuille</a> ou dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Pour cet outil, et <a href="../fr/TechDraw_StackBottom.html" title="TechDraw StackBottom/fr">TechDraw Empiler en bas</a>, l'ordre de s&eacute;lection est important.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_StackTop.svg&amp;filetimestamp=20240710143734&amp;.html" class="mw-file-description"><img src="../File/TechDraw_StackTop.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">D&eacute;placer la vue vers le haut de la pile</a></span>.</li>
-<li>S&eacute;lectionnez la <b>TechDraw &rarr; Empilement &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_StackTop.svg&amp;filetimestamp=20240710143734&amp;.html" class="mw-file-description"><img src="../File/TechDraw_StackTop.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> D&eacute;placer la vue vers le haut de la pile</b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_StackTop.svg&amp;filetimestamp=20240710143734&amp;.html" class="mw-file-description"><img src="../File/TechDraw_StackTop.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Haut de la pile</a></span>.</li>
+<li>S&eacute;lectionnez la <b>TechDraw &rarr; Empilement &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_StackTop.svg&amp;filetimestamp=20240710143734&amp;.html" class="mw-file-description"><img src="../File/TechDraw_StackTop.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Haut de la pile</b> du menu.</li></ul></li>
 <li>La propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Vue</span><b>Stack Order</b> des vues est modifi&eacute;e.</li></ol>
-</div>
 <p><span id="Scripting"></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
@@ -114,35 +112,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124120429
+Cached time: 20260124120521
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.116 seconds
-Preprocessor visited node count: 390/1000000
-Post&#8208;expand include size: 25071/2097152 bytes
-Template argument size: 10037/2097152 bytes
+CPU time usage: 0.083 seconds
+Real time usage: 0.142 seconds
+Preprocessor visited node count: 389/1000000
+Post&#8208;expand include size: 25021/2097152 bytes
+Template argument size: 9987/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1211/5000000 bytes
+Unstrip post&#8208;expand size: 1215/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.498      1 -total
- 26.72%    8.415      1 Template:TechDraw_Tools_navi/fr
- 22.69%    7.148      2 Template:Navigation_menu_2
- 16.15%    5.088      1 Template:PropertyView
- 14.53%    4.577      1 Template:Userdocnavi/fr
- 10.54%    3.320      2 Template:Docnav/fr
- 10.36%    3.262      1 Template:Variable
-  9.99%    3.146      1 Template:GuiCommand/fr
-  7.93%    2.498      1 Template:Button
-  7.12%    2.242      2 Template:Incode
+100.00%   42.911      1 -total
+ 22.66%    9.724      1 Template:TechDraw_Tools_navi/fr
+ 17.96%    7.706      1 Template:Userdocnavi/fr
+ 14.72%    6.317      2 Template:Navigation_menu_2
+ 14.02%    6.017      1 Template:GuiCommand/fr
+ 12.15%    5.212      1 Template:PropertyView
+ 10.23%    4.390      2 Template:Docnav/fr
+  7.62%    3.269      2 Template:Incode
+  7.45%    3.197      1 Template:MenuCommand
+  6.65%    2.852      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297003-0!canonical and timestamp 20260124120428 and revision id 1743366. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297003-0!canonical and timestamp 20260124120521 and revision id 1743368. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
